--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ license_file = LICENSE
 description = WHAT IS THE REASON YOU BUILD THIS PROJECT AND WHAT IT DOES
 long_description = file: README.md
 long_description_content_type = text/markdown
-keywords = pastebin, pastebinapi, client
+keywords = pastebin, pastebinapi, client, opensource
 url = https://github.com/heartlog/pasteconnect
 classifiers =
     Programming Language :: Python :: 3
