--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 0.1.0
 author = Heartlog
 author_email = heartlog@skiff.com
 license_file = LICENSE
-description = WHAT IS THE REASON YOU BUILD THIS PROJECT AND WHAT IT DOES
+description = Package to upload code/text to pastebin.com
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = pastebin, pastebinapi, client, opensource
