--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = pasteconnect
-version = 0.1.0
+version = 0.2.0
 author = Heartlog
 author_email = heartlog@skiff.com
 license_file = LICENSE
-description = Package to upload code/text to pastebin.com
+description = Package to read and upload code/text to pastebin.com.
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = pastebin, pastebinapi, client, opensource
