--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = pastebin, pastebinapi, client, opensource
 url = https://github.com/heartlog/pasteconnect
+download_url = https://github.com/heartlog/pasteconnect/releases
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.8
