--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ url = https://github.com/heartlog/pasteconnect
 download_url = https://github.com/heartlog/pasteconnect/releases
 classifiers =
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
