--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = pasteconnect
 version = 0.6.0
 author = Heartlog
 author_email = heartlog@skiff.com
-license_file = LICENSE
+license_files = LICENSE
 description = Package to read and upload code/text to pastebin.com.
 long_description = file: README.md
 long_description_content_type = text/markdown
