--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,8 @@ classifiers =
 [options]
 install_requires =
 	requests
+	fake-useragent
+	
 packages = find:
 python_requires = >=3.7
 include_package_data = True
