--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ classifiers =
 install_requires =
 	requests
 	fake-useragent
-	
+	python-dotenv
 packages = find:
 python_requires = >=3.7
 include_package_data = True
